PR/51774: David Binderman: Remove unused variable.